--- a/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
+++ b/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
@@ -21,7 +21,7 @@
         <editor role="finalReviewer" xml:id="UT22084-072-021-300">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -164,6 +164,9 @@
                 </change>
                 <change who="#john" when="2024-07-11T15:43:20.686Z" type="text-version" status="1.0.4" xml:id="UT22084-072-021-1233">
                     <desc>Further edit to same.</desc>
+                </change>
+                <change who="#andre" when="2024-07-12T18:16:16.621Z" type="text-version" status="1.0.5" xml:id="UT22084-072-021-1234">
+                    <desc>Glossary integration revised - activated in CG</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -896,7 +899,7 @@
             the Buddhist Tradition of South and Southeast Asia</title>, 160–92. Delhi: Motilal Banarsidass, 1997.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
             <gloss type="term" xml:id="UT22084-072-021-229">
@@ -937,18 +940,16 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-072-021-231" type="term" mode="match">
-              <term type="translationMain">eight inopportune states</term>
-              <term xml:lang="Sa-Ltn" type="attestedOther">aṣṭākṣaṇa</term>
-              <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi khom brgyad</term>
-              <term xml:lang="bo" type="attestedSource" n="1">མི་ཁོམ་བརྒྱད།</term>
-              <note type="definition">
-                <p>A set of circumstances that do not provide the freedom to practice the Buddhist path: being born in the realms of (1) the hells, 
-                  (2) pretas, (3) animals, or (4) long-lived gods; in the human realm among (5) barbarians or (6) people with wrong views,  
-                  (7) in places where the Buddhist teachings do not exist or, where they do exist, (8) without adequate faculties to understand those teachings.</p>
-              </note>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-072-021-231" type="term" mode="match">
+                            <term type="translationMain">eight inopportune states</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther">aṣṭākṣaṇa</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi khom brgyad</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">མི་ཁོམ་བརྒྱད།</term>
+                            <note type="definition" rend="override">
+                                <p>A set of circumstances that do not provide the freedom to practice the Buddhist path: being born in the realms of (1) the hells, (2) pretas, (3) animals, or (4) long-lived gods; in the human realm among (5) barbarians or (6) people with wrong views, (7) in places where the Buddhist teachings do not exist or, where they do exist, (8) without adequate faculties to understand those teachings.</p>
+                            </note>
+                        </gloss>
+                    </item>
           <item>
             <gloss type="term" xml:id="UT22084-072-021-232">
               <term type="translationMain">deva </term>
@@ -1065,20 +1066,16 @@
             </gloss>
           </item>
           <item>
-            <gloss xml:id="UT22084-072-021-246" type="term" mode="match">
-              <term type="translationMain">wheel-turning king</term>
-              <term xml:lang="Sa-Ltn" type="attestedSource">cakravartin</term>
-              <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’khor los sgyur ba’i rgyal po</term>
-              <term xml:lang="bo" type="attestedSource" n="1">འཁོར་ལོས་སྒྱུར་བའི་རྒྱལ་པོ།</term>
-              <note type="definition">
-                <p>An ideal monarch or emperor who, as the result of the merit accumulated in previous lifetimes, rules over a vast realm in accordance with the Dharma. Such a monarch is called a <foreign xml:lang="Sa-Ltn">cakravartin</foreign> because he bears a wheel (<foreign xml:lang="Sa-Ltn">cakra</foreign>) that rolls (<foreign xml:lang="Sa-Ltn">vartana</foreign>) across the earth, bringing all
-                  lands and kingdoms under his power. The cakravartin conquers his territory without causing harm, and his activity causes beings to enter the path of wholesome actions. According to Vasubandhu’s <title xml:lang="Sa-Ltn">Abhidharmakośa</title>, just as with the buddhas, only one cakravartin appears in a world system at any given time. They are likewise endowed with the thirty-two major marks of a
-                  great being (<foreign xml:lang="Sa-Ltn">mahāpuruṣalakṣaṇa</foreign>), but a cakravartin’s marks are outshined by those of a buddha. They possess seven precious objects: the wheel, the elephant, the
-                  horse, the wish-fulfilling gem, the queen, the general, and the minister. An illustrative passage about the cakravartin and his possessions can be found in <title xml:lang="en">The Play in Full</title>
-                  (Toh 95), <ref target="https://read.84000.co/translation/toh95.html#UT22084-046-001-94">3.3</ref>–<ref target="https://read.84000.co/translation/toh95.html#UT22084-046-001-104">3.13</ref>. </p>
-              </note>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-072-021-246" type="term" mode="match">
+                            <term type="translationMain">wheel-turning king</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource">cakravartin</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’khor los sgyur ba’i rgyal po</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">འཁོར་ལོས་སྒྱུར་བའི་རྒྱལ་པོ།</term>
+                            <note type="definition" rend="override">
+                                <p>An ideal monarch or emperor who, as the result of the merit accumulated in previous lifetimes, rules over a vast realm in accordance with the Dharma. Such a monarch is called a <foreign xml:lang="Sa-Ltn">cakravartin</foreign> because he bears a wheel (<foreign xml:lang="Sa-Ltn">cakra</foreign>) that rolls (<foreign xml:lang="Sa-Ltn">vartana</foreign>) across the earth, bringing all lands and kingdoms under his power. The cakravartin conquers his territory without causing harm, and his activity causes beings to enter the path of wholesome actions. According to Vasubandhu’s <title xml:lang="Sa-Ltn">Abhidharmakośa</title>, just as with the buddhas, only one cakravartin appears in a world system at any given time. They are likewise endowed with the thirty-two major marks of a great being (<foreign xml:lang="Sa-Ltn">mahāpuruṣalakṣaṇa</foreign>), but a cakravartin’s marks are outshined by those of a buddha. They possess seven precious objects: the wheel, the elephant, the horse, the wish-fulfilling gem, the queen, the general, and the minister. An illustrative passage about the cakravartin and his possessions can be found in <title xml:lang="en">The Play in Full</title> (Toh 95), <ref target="https://read.84000.co/translation/toh95.html#UT22084-046-001-94">3.3</ref>–<ref target="https://read.84000.co/translation/toh95.html#UT22084-046-001-104">3.13</ref>. </p>
+                            </note>
+                        </gloss>
+                    </item>
           <item>
             <gloss xml:id="UT22084-072-021-247" type="term" mode="match">
               <term type="translationMain">seven royal treasures</term>
