--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -203,6 +203,12 @@
                 </change>
                 <change who="#andre" when="2024-06-27T09:38:30.936Z" type="text-version" status="1.0.5" xml:id="UT22084-066-012-201">
                     <desc>Jetavana, Anāthapiṇḍada’s Park</desc>
+                </change>
+                <change who="#sameer" when="2024-07-15T20:25:26.886Z" type="translation-status" status="1" xml:id="UT22084-066-012-202">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-07-15T20:25:26.886Z" type="text-version" status="1.0.6" xml:id="UT22084-066-012-203">
+                    <desc>Included in App v 3.16</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
