--- a/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
+++ b/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
@@ -17,13 +17,16 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-001-002-8">Geshé Tséwang Nyima</consultant>
                 <editor role="projectEditor" xml:id="UT22084-001-002-28">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-001-002-41">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-001-002-56">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-001-002-68">John Canti</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-001-002-81">Sameer Dhingra</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2024</date>
+                <edition>v 0.1.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-001-002"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +102,21 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-01T11:41:55.116Z" type="text-version" status="0.1.13" xml:id="UT22084-001-002-46">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T11:42:36.123Z" type="text-version" status="0.1.14" xml:id="UT22084-001-002-57">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T11:50:38.238Z" type="text-version" status="0.1.15" xml:id="UT22084-001-002-69">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-16T08:47:24.386Z" type="text-version" status="0.1.16" xml:id="UT22084-001-002-82">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-16T08:54:48.882Z" type="translation-status" status="2.a" xml:id="UT22084-001-002-83">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#sameer" when="2024-07-16T08:54:48.882Z" type="text-version" status="0.1.17" xml:id="UT22084-001-002-84">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
