--- a/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
+++ b/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
@@ -22,7 +22,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-001-002-81">Sameer Dhingra</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.17 <date>2024</date>
+                <edition>v 0.1.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -118,6 +118,9 @@
                 </change>
                 <change who="#sameer" when="2024-07-16T08:54:48.882Z" type="text-version" status="0.1.17" xml:id="UT22084-001-002-84">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-16T08:56:06.588Z" type="text-version" status="0.1.16" xml:id="UT22084-001-002-85">
+                    <desc>User set version to 0.1.16</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
