--- a/translations/kangyur/translations/041-003_toh58-the_teaching_to_venerable_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/translations/041-003_toh58-the_teaching_to_venerable_nanda_on_entering_the_womb.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-041-003-340">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.14 <date>2024</date>
+                <edition>v 1.1.15 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -234,6 +234,9 @@
                 <change who="#konchog" when="2024-07-18T02:01:02.734Z" type="text-version" status="1.1.14" xml:id="UT22084-041-003-397">
                     <desc>Third round of adjustments through all sections, following extensive consultation with NR to resolve discrepancies with Toh 57.</desc>
                 </change>
+                <change who="#konchog" when="2024-07-22T21:28:43.95Z" type="text-version" status="1.1.15" xml:id="UT22084-041-003-399">
+                    <desc>Fourth round of adjustments through all sections, following consultation with NR and finding other errors to correct.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -436,7 +439,7 @@
                                 issaikyō</title> series (Hōshaku bu 3, pp. 203–17), as has <title xml:lang="Zh-Ltn">Rutai jing</title> (Hōshaku bu 3, pp. 218–56).
                             Western-language translations of versions of the sūtra include Amy Paris
                             Langenberg’s English translation of Toh 57 as part of her PhD thesis
-                            (2008), Franz Huebotter’s German translation of <title xml:lang="Zh-Ltn">Baotai jing</title> (1932), and Robert Kritzer’s English
+                            (2008), Franz Huebotter’s German translation of <title xml:lang="Zh-Ltn">Baotai jing</title> (1932), Robert Kritzer’s translation of <title xml:lang="en">The Teaching to the Venerable Nanda on Dwelling the Womb</title> for 84000 (mngal du gnas pa, Toh 57, 2024), and Kritzer’s English
                             translation of one of the long versions of the sūtra as contained in Toh
                             6 (2014a). Studies devoted to the sūtra include Kritzer (2006–7, 2009,
                             2012, 2013, 2014a, 2014b) and Langenberg (2017).</note>
@@ -663,9 +666,9 @@
                         obtained, a body will not be properly obtained.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-45"/>
                     <p tid="38">“When this body arises, its nature is not different from the four
-                        great elements of the father and mother. That is, the earth element acts for
-                        firmness. The water element acts for moisture. The fire element acts for
-                        heat. The wind element acts for lightness and movement. If those kalala
+                        great elements of the father and mother. That is, the earth element performs the function of
+                        solidity. The water element performs the function of fluidity. The fire element performs the function of
+                        heat. The wind element performs the function of lightness and mobility. If those kalala
                         bodies had only the earth element but did not have the water element, they
                         would be unable to cohere, just as dry flour or ashes are unable to be
                         grasped. If they had only the water element but did not have the earth
@@ -715,11 +718,11 @@
                         Vedanā, saṃjñā, saṃskāra, and vijñāna are called <foreign xml:lang="Sa-Ltn" type="term">nāma</foreign>.</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-041-003-52"/>
-                    <p tid="44">“The moment the five skandhas of nāma and rūpa are reborn, suffering
+                    <p tid="44">“The moment the five <foreign xml:lang="Sa-Ltn" type="term">skandhas</foreign> of nāma and rūpa are reborn, suffering
                         is experienced. If I do not praise this moment, how could I even consider
                         praising a circling among existences over a long period of time? If even a
                         little filth stinks, how much more so a lot of filth? Therefore, who would
-                        desire and be attached to the five upādānaskandhas of the body of the
+                        desire and be attached to the five <foreign xml:lang="Sa-Ltn" type="term">upādānaskandhas</foreign> of the body of the
                         kalala?</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-53"/>
                     <p tid="45">“Furthermore, Nanda, this body spends thirty-eight weeks in the
@@ -772,38 +775,38 @@
                             differs: “turns the <foreign xml:lang="Sa-Ltn" type="term">ghana</foreign> into a <foreign xml:lang="Sa-Ltn" type="term">praśākha</foreign>” (<foreign xml:lang="Zh-Ltn" type="quote">ling
                                 jia na zhuan wei ban luo she qu</foreign>
                             <foreign xml:lang="zh">令伽那轉爲般羅奢佉</foreign>, Taishō 310.323a24), <foreign xml:lang="Sa-Ltn">praśākha</foreign> being a name given to the
-                            embryo at this stage of development.</note> and gives rise to signs of
+                            embryo at this stage of development.</note> and gives rise to features of
                         the two thighs, two shoulders, and head. Just as when rain falls in the
                         rainy season of summer and produces branches and leaves on trees, in the
-                        same way, the force of karmic wind causes the signs of the body to
+                        same way, the force of karmic wind causes the features of the body to
                         appear.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-62"/>
                     <p tid="50">“While the being in the mother’s womb is in the sixth week, again a
                         karmic wind, <distinct>
                             <term>food</term>
                         </distinct>, comes into existence.
-                        The force of this wind gives rise to four signs. What are the four? The four
-                        types of signs are the signs of the two forearms and the two shanks.</p>
+                        The force of this wind gives rise to four features. What are the four? The four
+                        types of features are the features of the two forearms and the two shanks.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-63"/>
                     <p tid="51">“While the being in the mother’s womb is in the seventh week, again
                         a karmic wind, <distinct>twister</distinct>, comes into existence. The force
-                        of this wind gives rise to four types of signs, namely, the signs of the two
-                        palms of the hands and two soles of the feet. These signs are very soft,
+                        of this wind gives rise to four types of features, namely, the features of the two
+                        palms of the hands and two soles of the feet. These features are very soft,
                         like a mass of bubbles.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-64"/>
                     <p tid="52">“While the being in the mother’s womb is in the eighth week, again a
                         karmic wind, <distinct>reversing and turning</distinct>, comes into
-                        existence. The force of this wind gives rise to twenty signs, namely, the
-                        signs of the twenty digits of the hands and feet. As for this, just as rain
+                        existence. The force of this wind gives rise to twenty features, namely, the
+                        features of the twenty digits of the hands and feet. As for this, just as rain
                         falling in the rainy season of summer makes the branches and leaves on the
                         trees gradually grow and increase, in the same way, the force of karmic wind
-                        causes the signs of the body to appear.</p>
+                        causes the features of the body to appear.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-65"/>
                     <p tid="53">“While the being in the mother’s womb is in the ninth week, again a
                         karmic wind, <distinct>separating</distinct>, comes into existence. <ref cRef="F.240.b" type="folio" xml:id="UT22084-041-003-299"/> The force of
-                        this wind gives rise to nine types of signs. What are the nine? The signs of
+                        this wind gives rise to nine types of features. What are the nine? The features of
                         the two eyes, the two ears, the two nostrils, the mouth, and the places of
-                        excrement and urine are the nine types of signs.</p>
+                        excrement and urine are the nine types of features.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-66"/>
                     <p tid="54">“While the being in the mother’s womb is in the tenth week, again a
                         karmic wind, <distinct>making firm</distinct>, comes into existence. The
@@ -991,7 +994,7 @@
                         existence. The force of this wind produces the blood of its body.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-87"/>
                     <p tid="69">“While the being in the mother’s womb is in the twenty-third week,
-                        again a karmic wind, <distinct>hold cleanly</distinct>, comes into
+                        again a karmic wind, <distinct>holding cleanly</distinct>, comes into
                         existence. The force of this wind produces the skin of its body.</p>
                     <milestone unit="chunk" xml:id="UT22084-041-003-88"/>
                     <p tid="70">“While the being in the mother’s womb is in the twenty-fourth week,
@@ -1175,7 +1178,7 @@
                         feeds on the palate. There are two types of worm, <distinct>webbed
                             hand</distinct>
                         <note place="end" xml:id="UT22084-041-003-112">
-                            <distinct>Hand net</distinct> in the Chinese.</note> and <distinct>half
+                                “Hand net” in the Chinese.</note> and <distinct>half
                             bent</distinct>, that live in and feed on the palms of the hands. There
                         are two types of worm, <distinct>upper arm</distinct> and <distinct>lower
                             arm</distinct>, that live in and feed on the arms. There are two types
@@ -1263,7 +1266,7 @@
                     <p tid="87">“Furthermore, Nanda, from the time it is born until it is fully
                         grown, this body is sustained by clothing and food, and it becomes fully
                         developed. Its lifespan can be one hundred years, or it can be shorter than
-                        that. Those one hundred years will add up to three hundred seasons, namely
+                        that. Those one hundred years will add up to three hundred seasons, namely,
                         spring, summer, and winter. Spring is the hot season. Summer is the rainy
                         season. Winter is the cold season. The three seasons have four months each,
                         so there are twelve months in one year, and twelve hundred months in one
@@ -1431,6 +1434,8 @@
                     <bibl xml:id="UT22084-041-003-145">
                         <title xml:lang="Bo-Ltn">tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa</title> (<title xml:lang="Sa-Ltn">Āyuṣmannandagarbhāvakrāntinirdeśa</title>). Toh 58, Degé Kangyur vol.
                         41 (dkon brtsegs, ga), folios 237.a–248.a.</bibl>
+                    <bibl xml:id="UT22084-041-003-398">
+                        <title xml:lang="Bo-Ltn">tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa</title>.  bka’ ’gyur (dpe bsdur ma) [Comparative Edition of the Kangyur], krung go’i bod rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur khang (The Tibetan Tripitaka Collation Bureau of the China Tibetology Research Center). 108 volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing House), 2006–9, vol. 31, pp. 737–774.</bibl>
                     <bibl xml:id="UT22084-041-003-395">
                         <title xml:lang="Bo-Ltn">tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa</title> (<title xml:lang="Sa-Ltn">Āyuṣmannandagarbhāvakrāntinirdeśa</title>). Lhasa Kangyur vol. 37 (dkon
                         brtsegs, ga), folios 399.b–448.a.</bibl>                    
@@ -1443,7 +1448,7 @@
                         <title xml:lang="Bo-Ltn">dga' bo la mngal na gnas pa bstan pa</title> (<title xml:lang="Sa-Ltn">
                             <ref rend="pending" target="https://read.84000.co/translation/toh57.html">Nandagarbhāvakrāntinirdeśa</ref>
                         </title>). Toh 57, Degé Kangyur
-                        vol. 41 (dkon brtsegs, ga), folios 210.b–232.a.</bibl>
+                        vol. 41 (dkon brtsegs, ga), folios 205.b–237.a.</bibl>
                     <bibl xml:id="UT22084-041-003-316">
                         <title xml:lang="Bo-Ltn">rgya cher rol pa</title> (<title xml:lang="Sa-Ltn">Lalita­vistara</title>). Toh 95, Degé Kangyur vol. 46 (mdo sde, kha),
                         folios 1.b–216.b. English translation in <title xml:lang="en">The Play in Full</title>
@@ -1517,7 +1522,7 @@
                 </div>
 
                 <div type="section" xml:id="UT22084-041-003-listBibl-3">
-                    <head type="section" tid="118">Secondary sources</head>
+                    <head type="section" tid="118">Secondary Sources</head>
                     <bibl xml:id="UT22084-041-003-324">84000. <title xml:lang="en">
                         <ref target="https://read.84000.co/translation/toh287.html">The
                             Application of Mindfulness of the Sacred Dharma</ref>
@@ -2342,7 +2347,7 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-041-003-212">
-                            <term type="translationMain">hold cleanly</term>
+                            <term type="translationMain">holding cleanly</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">yongs su dag par
                                 ’dzin pa</term>
