--- a/translations/kangyur/translations/058-002_toh155_questions_of_naga_king_sagara_3.xml
+++ b/translations/kangyur/translations/058-002_toh155_questions_of_naga_king_sagara_3.xml
@@ -20,7 +20,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-058-002-80">Simeon Joffe</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.15.23 <date>2024</date>
+                <edition>v 2.15.24 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -146,6 +146,9 @@
                 </change>
                 <change who="#celso" when="2024-04-30T11:38:23.923Z" type="text-version" status="2.15.23" xml:id="UT22084-058-002-110">
                     <desc>Activated pending links</desc>
+                </change>
+                <change who="#john" when="2024-07-26T07:56:51.631Z" type="text-version" status="2.15.24" xml:id="UT22084-058-002-111">
+                    <desc>Edits to homage and bodhisattva mahāsattvas.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -291,14 +294,14 @@
                     <milestone unit="chunk" xml:id="UT22084-058-002-13"/>
                     <p tid="14">
                         <!--<modularPassage type="homage">-->
-                        <ref cRef="F.205.a" type="folio" xml:id="UT22084-058-002-67"/> Prostrations to all buddhas and
+                        <ref cRef="F.205.a" type="folio" xml:id="UT22084-058-002-67"/> Homage to all buddhas and
                         bodhisattvas.<!--</modularPassage>-->
                     </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-058-002-14"/>
                     <p tid="15">
                         <!--<modularPassage type="thusDid">-->Thus did I hear at one time. The Bhagavān <ref cRef="F.205.b" type="folio" xml:id="UT22084-058-002-68"/> was dwelling at the place of the nāga king Sāgara together with a great assembly of
-                        1,250<!--</modularPassage>--> bhikṣus as well as a multitude of bodhisattvas and mahāsattvas. At that time the Bhagavān said
+                        1,250<!--</modularPassage>--> bhikṣus as well as a multitude of bodhisattva mahāsattvas. At that time the Bhagavān said
                         to the nāga king Sāgara: </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-058-002-15"/>
