--- a/translations/kangyur/placeholders/001-004_toh1-4-chapter_4_on_the_rains.xml
+++ b/translations/kangyur/placeholders/001-004_toh1-4-chapter_4_on_the_rains.xml
@@ -16,14 +16,16 @@
                 <consultant role="advisor" xml:id="UT22084-001-004-8">Maurice Ozaine</consultant>
                 <editor role="projectEditor" xml:id="UT22084-001-004-24">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-001-004-36">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-001-004-51">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-001-004-52">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2024</date>
+                <edition>v 0.1.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-001-004"/>
                 <date/>
             </publicationStmt>
@@ -83,6 +85,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-01T11:48:24.993Z" type="text-version" status="0.1.8" xml:id="UT22084-001-004-41">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T11:49:08.737Z" type="text-version" status="0.1.9" xml:id="UT22084-001-004-53">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#andre" when="2024-07-27T10:48:12.624Z" type="translation-status" status="2.a" xml:id="UT22084-001-004-54">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#andre" when="2024-07-27T10:48:12.624Z" type="text-version" status="0.1.10" xml:id="UT22084-001-004-55">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
