--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -33,7 +33,7 @@
                                 <editor role="finalReviewer" xml:id="UT22084-034-007-235">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.7 <date>2024</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -218,6 +218,9 @@
                 <change who="#martina-cotter" when="2024-02-21T15:33:38.07Z" type="text-version" status="1.0.7" xml:id="UT22084-034-007-275">
                     <desc>checked attested sources.</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-07-29T21:34:56.859Z" type="text-version" status="1.0.8" xml:id="UT22084-034-007-276">
+                    <desc>updated links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -296,7 +299,7 @@
                                         <p tid="34">The figure of Kauśika/Śakra also features as an
                                                 important interlocutor in the larger prajñāpāramitā
                                                   sūtras,<note place="end" xml:id="UT22084-034-007-10"> See, for example,
-                                                  <ref target="https://read.84000.co/translation/toh10.html?part=UT22084-029-001-chapter-22#UT22084-029-001-chapter-22">Chapters 22</ref>–<ref target="https://read.84000.co/translation/toh10.html?part=UT22084-029-001-chapter-32#UT22084-029-001-chapter-32">32</ref> in Gareth Sparham, trans., The
+                                                  <ref target="https://read.84000.co/translation/toh10.html#UT22084-029-001-chapter-22">Chapters 22</ref>–<ref target="https://read.84000.co/translation/toh10.html#UT22084-029-001-chapter-32">32</ref> in Gareth Sparham, trans., The
                                                           <title xml:lang="en">Perfection of Wisdom in Eighteen Thousand Lines</title>,
                                                   Toh 10 (2022). Chapters 22 and 25 are even
                                                   explicitly named for Kauśika (under the name
@@ -929,7 +932,7 @@
                                                   84000: Translating the Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-034-007-90">Sparham, Gareth, trans.
                                                   <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh10.html?part=UT22084-029-001-chapter-32">The Perfection of Wisdom in Eighteen Thousand
+                            <ref target="https://read.84000.co/translation/toh10.html#UT22084-029-001-chapter-32">The Perfection of Wisdom in Eighteen Thousand
                                                           Lines</ref>
                         </title> (<title xml:lang="Sa-Ltn">Aṣṭādaśasāhasrikā­prajñā­pāramitā</title>, Toh 10).
                                                 84000: Translating the Words of the Buddha, 2022.
